On the right way

--- a/index.html
+++ b/index.html
@@ -33,7 +33,24 @@
 
     <br>
 
-        <button type="submit" id="getBook">Add Book</button>
+        <button id="getBook">Add Book</button>
+        <button id="clearBook">Clear</button>
+    </div>
+
+    <div>
+        <table>
+            <thead>
+            <tr>
+              <th>Book</th>
+              <th>Author</th>
+              <th>Pages</th>
+              <th>Read</th>
+            </tr>
+        </thead>
+            <tbody>
+                
+            </tbody>
+          </table> 
     </div>
 
 
