--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
     <title>BOOKS LIBRARY</title>
     <script src="main.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" defer></script>
 </head>
 <body>
 
-    <button id="newBook">Add Book</button>
-    <div id="bookForm">
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid">
+          <span class="navbar-brand mb-0 h1">BOOKS LIBRARY</span>
+          <div class="">
+            <button id="newBook" class="btn btn-secondary btn-lg">Add Book</button>
+            <button id="cancelBook" class="btn btn-secondary btn-lg">Cancel</button>
+          </div>
+        </div>
+      </nav>
+
+    
+    <div id="bookForm" class="container">
         <div>
             <label for="bookTitle">Book title</label>
             <input type="text" id="bookTitle" placeholder="Title">
@@ -39,13 +51,14 @@
     </div>
 
     <div>
-        <table>
+        <table class="table table-dark">
             <thead>
             <tr>
               <th>Book</th>
               <th>Author</th>
               <th>Pages</th>
               <th>Read</th>
+              <th>Delete</th>
             </tr>
         </thead>
             <tbody>
