90% finished, still  need to add a button that change Yes to No and vice versa

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         </div>
       </nav>
 
-      <h1 id="welcomePage">Welcome to the Books Library</h1>
+
+      <h1 id="welcomePage" class="ml2">Welcome to the Books Library</h1>
 
     
     <div id="bookForm" class="container">
@@ -68,6 +69,6 @@
             </tbody>
           </table> 
     </div>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 </body>
 </html>
