--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
 
         <div class="container">
 
+
             <input type="radio" id="yesRead" name="bookRead" value="Yes">
-            <label for="yesRead">Yes</label>
+            <label for="yesRead">Read</label>
         
             <input type="radio" id="noRead" name="bookRead" value="No">
-            <label for="noRead">No</label>
+            <label for="noRead">Not read</label>
             
         </div>
 
